--- a/style.css
+++ b/style.css
@@ -2,11 +2,17 @@ body {
     background-color: #2d4972;
     text-align: center;
     zoom:130%;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    /* font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; */
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #ffffff;
 }
 
 h1 {
     color: #ffffff;
+}
+
+#countdown {
+  font-size: 8rem;
 }
 
 footer {
